@@ -9,17 +9,23 @@ DIST rrdtool-1.3.8.tar.gz 1021427 RMD160 e05cada9d1df11ed474536c1f6e11d7cc4c0807
 DIST rrdtool-1.4.5.tar.gz 1348713 RMD160 9c45c3be7bcb8e17260055a33e936f307884914f SHA1 56638e8aedd5d5522152e86746e382b75dc48c35 SHA256 1267af420533d846432e55352db89b0f2507c711f80c65e016f7484f3cb0cf1d
 EBUILD rrdtool-1.0.50.ebuild 2699 RMD160 9437bd6dcdc9a746e6d1ed4e3acbf8e1743fd22f SHA1 c499d29e873de476025b44a65dc9d91c16e4d0a6 SHA256 641512476009621f7402074a8bdfb19634c8ef55d038dc41f6fd59aee8bf87c9
 EBUILD rrdtool-1.3.8.ebuild 2675 RMD160 3c3f86284ec51257d8c0ababc429223a5be454d8 SHA1 c2ee49578fbd4ba40e7ed20479c23d0533cf1ee6 SHA256 b487a17f6fee97af87d53d496e59d64df86af93abe4feba0337846b352b80829
-EBUILD rrdtool-1.4.5-r1.ebuild 3637 RMD160 82679b38aad0e2239ffa5df29cb8fa6594740e19 SHA1 df97f94f04382c3e3e1bbb87ec9f79941ef68e5b SHA256 8071750d4fdb586aa28efe43476adccf199bd8d1a4ea9621a88ee2724fec52b7
-MISC ChangeLog 32654 RMD160 65b65e92f6eafb3cd02ca84704cfea8a5f5ad258 SHA1 c5d63a898c1a2f265c2478b2d21a91f9bb982424 SHA256 36f5c46a8ee7f143dbceb516fdd83d74c2322ea8aaf7569007008c7d91af309d
+EBUILD rrdtool-1.4.5-r1.ebuild 3635 RMD160 269593001c4d05c1b094404a39578ba0094b1337 SHA1 79f84a720ab14e2027748edd2fdc01575fda7b0c SHA256 379e064652dc6258fe905056532d8cc92da462a7e244732851457b3432d78c13
+MISC ChangeLog 32766 RMD160 ce856822f3f144961a86dcc0330d20fdb88ce3da SHA1 f3e6b0426f98568c18af2d063c9c33fc7657b63d SHA256 97794d8673a8d6b3140c5db7d45c9e01f289073fc6f2f6a5a5a8ccebc394f2b4
 MISC metadata.xml 376 RMD160 78da9054230eb8ed5474d75d1a0f7419eb1e45f9 SHA1 b7645e63557b4d5049032390ee07d86c5411fc96 SHA256 ccdb09cfa58f274722a7b61fb666c96c5d1c55d828fff44abc9415e56c056bb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJOh7ZaAAoJEEqz6FtPBkyjChwIAKFryJXG8STVBl3N4qxmP4Et
-Ji47409uodyumvRqqKafWvrO0Onb7mNmmSDEsWOczbYP1+vd5+WqGDxj2Es4c09n
-RjRwc/aiY8HARaoDWk2BHMH1kw7i1E23FIpHM3Ty2PJTizTKm2PR2khCuFqBOLoS
-55SaZx0c5HxLzwceJYV5my9MrhMim1iRqDS+/D/Fkm3+E5xDyy7j+m5ZNjTlEe7X
-hHkg8iFQUUfBXElQUFkxVwX5d9uNOQURQaFXGz7pK3QuMb4zzngjufdSlbyPCpBv
-AkVmxvCtLLzuKj7HsEcv4xlmTDNT2aFIjhExbZ8L3kgG4uIqk1/9hd8Ls6cd4nU=
-=Pz2C
+iQIcBAEBCgAGBQJOmZ0HAAoJEPqDWhW0r/LCFjAP/0UgQxWK/OwstOVQ4wSm0Em/
+2ESZsi+DI95nj/2NPoLjsN+xfWyN2HP85rLYlR7MRRw2vfJ8pzXh2naRXyZd74Nh
+pe5cJkVb5XOEhnFqCRRtOF5woM5wJBwUnAEoJhNYz9BVch1yy3ziPoyurwGxZTWx
+C9urfgxj8A4o17zNB056SEgWaOcLDLbGrl8GOPGBrCl1HEwPJEo/BqYrwxs2Y6mA
+U6U8OzCt3rsRAWf5amC9QlYTJflKm297VwAG46dOqeq9WXjZGRMlESIyFOcgaJAk
+ct2JxTPcNHlXofqgTXXFrxEglDnf6zkL8zUR2gpMniGc3hoXiJSwksVZe2MPUR0g
+L6F1pxYozruK00ES2OXZArD5sWiXGBdJmi6qCPS+n8pu2IX5lurCfhD5UJnN330S
+60DNfrobX7Dd/uxUwjJ+4xDi/62W0L6WawWVwHyW0B5lgxZjAybSaVvsU+rg0Exn
+9xQvrPI9BOVchWf3kHJj1GOL4FW61p6RMS/EvuDXSrDn6Swi3CVx5BouJvnko1la
+zc97W58VlE3puCsuNuSoNPYcUpsB5Hwn1aYA6ViZ9nUbn/oURx3xCo4Goz+ZSjge
+Mo8jH1ZAxqpCjDUBLRHE4JCoN7cZn677yOwqTGLA6NcJBIV1KGV9JJ4UcfERFrSf
+rG/l9ANB0aHZWzb7m7r4
+=/TEI
 -----END PGP SIGNATURE-----
