@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/perl-DB_File-1.820.ebuild,v 1.18 2011/06/28 19:55:10 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/perl-DB_File-1.820.ebuild,v 1.19 2011/10/15 18:11:45 tove Exp $
 
 EAPI=2
 
@@ -14,4 +14,4 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd6
 IUSE=""
 
 DEPEND=""
-RDEPEND="|| ( ~dev-lang/perl-5.12.4 ~dev-lang/perl-5.12.3[berkdb] ~dev-lang/perl-5.12.2[berkdb] ~dev-lang/perl-5.12.1[berkdb] ~dev-lang/perl-5.10.1[berkdb] ~perl-core/DB_File-${PV} )"
+RDEPEND="|| ( ~dev-lang/perl-5.12.4[berkdb] ~dev-lang/perl-5.12.3[berkdb] ~dev-lang/perl-5.12.2[berkdb] ~dev-lang/perl-5.12.1[berkdb] ~dev-lang/perl-5.10.1[berkdb] ~perl-core/DB_File-${PV} )"
